--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
         <div id="term"></div>
         <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.terminal/1.0.5/js/jquery.terminal.min.js"></script>
-        <script src="js/bundle.js"></script>
+        <script src="js/web.js"></script>
     </body>
 </html>
