--- a/index.html
+++ b/index.html
@@ -1,13 +1,19 @@
 <html>
     <head>
-        <link href="https://cdnjs.cloudflare.com/ajax/libs/jquery.terminal/1.0.5/css/jquery.terminal.min.css" rel="stylesheet"/>
+        <link href="xterm/xterm.css" rel="stylesheet"/>
         <link href="css/main.css" rel="stylesheet"/>
     </head>
     <body>
         <a target="_blank" href="https://github.com/gcarvelli/text-adventure"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://camo.githubusercontent.com/a6677b08c955af8400f44c6298f40e7d19cc5b2d/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f677261795f3664366436642e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_gray_6d6d6d.png"></a>
-        <div id="term"></div>
+
+        <div id="container">
+            <div id="term-container" style="margin: 0px auto; position: relative; width: 800px">
+                <div id="term" style="width: 100%"></div>
+            </div>
+        </div>
+
         <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.terminal/1.0.5/js/jquery.terminal.min.js"></script>
+        <script src="xterm/xterm.js"></script>
         <script src="js/web.js"></script>
     </body>
 </html>
